kubernetes/manifests/ingress/fanout-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fanout-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: external-services
    networking.gke.io/managed-certificates: services-cert
    kubernetes.io/ingress.class: gce
spec:
  rules:
  - http:
      paths:
      - path: /example
        pathType: ImplementationSpecific
        backend:
          service:
            name: web
            port:
              number: 8080
      # - path: /v2/*
      #   pathType: ImplementationSpecific
      #   backend:
      #     service:
      #       name: web2
      #       port:
      #         number: 8080
